Visual changes to chart, weight is now displayed only once per month

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="navbar">
           <div class="navbar-inner">
             <div class="left"></div>
-            <div class="center sliding">Data input</div>
+            <div class="center sliding">Enter values</div>
             <div class="right"></div>
           </div>
         </div>
@@ -34,7 +34,7 @@
           <div data-page="index-left" class="page">
             <div class="page-content">
 
-<div class="content-block-title">Enter values</div>
+<div class="content-block-title">Your stats</div>
 <div class="list-block">
   <ul>
     <li>
