Fixed an error where it was possible to display previous chart by clicking around on the current one

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
 <div class="pages">
   <div data-page="about" class="page">
     <div class="page-content">
-      <div class="content-block">
-        <canvas id="myChart" width="0" height="0"></canvas>
+      <div id="contentBlock" class="content-block">
+        <canvas id="myChart" width="400" height="400"></canvas>
 
       </div>
     </div>
