--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
 </div>
 
               <p style="margin-left: 10%; margin-right: 10%;"><a onClick="calculate()" href="#" class="button button-big button-round color-red">Calculate</a></p>
-
               <!--<div class="content-block-title">Left View Links</div>
               <div class="list-block">
                 <ul>
@@ -275,5 +274,6 @@
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
     <script src="js/Chart.js"></script>
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   </body>
 </html>
