--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="panel panel-left panel-cover">
       <!-- Left view-->
       <div class="view view-left navbar-through layout-dark">
-        <div class="navbar">
+        <div id="navbar" class="navbar">
           <div class="navbar-inner">
             <div class="left"></div>
             <div class="center sliding">Enter values</div>
