Added checks for all inputs, added loading spinner while calculating chart

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Left panel with reveal effect-->
     <div class="panel panel-left panel-cover">
       <!-- Left view-->
-      <div class="view view-left navbar-through layout-dark">
+      <div class="view view-left navbar-through">
         <div id="navbar" class="navbar">
           <div class="navbar-inner">
             <div class="left"></div>
