Pre code clean-up, feature complete 0.1a

--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
     <!-- Right panel with cover effect-->
     <div class="panel panel-right panel-reveal layout-dark">
       <div class="content-block">
-        <p>Right panel content goes here</p>
+        <p>Weight Loss Calculator v0.1a</p>
+        <p>Creator of the app cannot be held liable for any potential harm caused by the use of this app. All data are estimates and might not accurately represent actual weight loss progress.</p>
       </div>
     </div>
     <!-- Views-->
@@ -242,12 +243,12 @@
               <div class="content-block-title">How does it work?</div>
               <div class="content-block">
                 <div class="content-block-inner">
-                  <p>This is an example of split view application layout where left view degrades to panel on narrow screens (iPad portrait and iPhone). It behaves like default Mail app on iOS 7.</p>
-                  <p>Each view may have different layout, different navbar type (dynamic, fixed or static) or without navbar. You can easily control one view from another without any line of JavaScript just using "data-view" attribute on links.</p>
-                  <p>Additional right panel is also available: <a href="#" data-panel="right" class="open-panel">right panel</a></p>
+                  <p>The main principle of losing weight is CICO (Calories In, Calories Out). In other words, in order to lose weight you have to burn more calories than you intake.</p>
+                  <p>This app can calculate and visualize your weight loss progress based on some parameters. The calculation itself is based on <a href="https://en.wikipedia.org/wiki/Harris–Benedict_equation">Harris-Benedict equations</a> (revies by Mifflin and St. Jeor) and is fairly accurate.</p>
+                  <p><a href="#" data-panel="right" class="open-panel">About</a></p>
                 </div>
               </div>
-              <div class="list-block">
+              <!--<div class="list-block">
                 <ul>
                   <li><a href="about.html" class="item-link">
                       <div class="item-content">
@@ -262,7 +263,7 @@
                         </div>
                       </div></a></li>
                 </ul>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
