--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div data-page="index-left" class="page">
             <div class="page-content">
 
+<!-- Input fields -->
 <div class="content-block-title">Your stats</div>
 <div class="list-block">
   <ul>
@@ -116,6 +117,7 @@
   </ul>
 </div>
 
+<!-- Activity level radio selectors -->
 <div class="content-block-title">Activity level</div>
 <div class="list-block">
   <ul>
@@ -168,48 +170,8 @@
 
   </ul>
 </div>
-
+              <!-- Button to calculate weight loss -->
               <p style="margin-left: 10%; margin-right: 10%;"><a onClick="calculate()" href="#" class="button button-big button-round color-red">Calculate</a></p>
-              <!--<div class="content-block-title">Left View Links</div>
-              <div class="list-block">
-                <ul>
-                  <li><a href="left-page-1.html" class="item-link">
-                      <div class="item-content">
-                        <div class="item-inner">
-                          <div class="item-title">Left Page 1</div>
-                        </div>
-                      </div></a></li>
-                  <li><a href="left-page-2.html" class="item-link">
-                      <div class="item-content">
-                        <div class="item-inner">
-                          <div class="item-title">Left Page 2</div>
-                        </div>
-                      </div></a></li>
-                </ul>
-              </div>
-              <div class="content-block-title">Control Main View</div>-->
-              <!--<div class="list-block">
-                <ul>
-                  <li><a href="about.html" data-view=".view-main" class="item-link close-panel">
-                      <div class="item-content">
-                        <div class="item-inner">
-                          <div class="item-title">About</div>
-                        </div>
-                      </div></a></li>
-                  <li><a href="services.html" data-view=".view-main" class="item-link close-panel">
-                      <div class="item-content">
-                        <div class="item-inner">
-                          <div class="item-title">Services</div>
-                        </div>
-                      </div></a></li>
-                  <li><a href="#" data-view=".view-main" class="back item-link close-panel">
-                      <div class="item-content">
-                        <div class="item-inner">
-                          <div class="item-title">Back in history</div>
-                        </div>
-                      </div></a></li>
-                </ul>
-              </div>-->
             </div>
           </div>
         </div>
@@ -248,33 +210,20 @@
                   <p><a href="#" data-panel="right" class="open-panel">About</a></p>
                 </div>
               </div>
-              <!--<div class="list-block">
-                <ul>
-                  <li><a href="about.html" class="item-link">
-                      <div class="item-content">
-                        <div class="item-inner">
-                          <div class="item-title">About</div>
-                        </div>
-                      </div></a></li>
-                  <li><a href="services.html" class="item-link">
-                      <div class="item-content">
-                        <div class="item-inner">
-                          <div class="item-title">Services</div>
-                        </div>
-                      </div></a></li>
-                </ul>
-              </div>-->
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- Most of the logic is here -->
     <script src="js/logic.js"></script>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
+    <!-- Chart.js library -->
     <script src="js/Chart.js"></script>
+    <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   </body>
 </html>
