Added horizontal line on the chart that shows goal weight

--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
     <script type="text/javascript" src="js/my-app.js"></script>
     <!-- Chart.js library -->
     <script src="js/Chart.js"></script>
+    <!-- Chart.js annotation plugin -->
+    <script src="js/chartjs-plugin-annotation.js"></script>
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   </body>
