Small tweak to material design index

--- a/index-material.html
+++ b/index-material.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/my-app.css">
     <link rel="stylesheet" href="css/framework7.material.colors.min.css">
   </head>
-  <body class="layout-white theme-red">
+  <body class="layout-white theme-purple">
     <!-- Status bar overlay for fullscreen mode-->
     <div class="statusbar-overlay"></div>
     <!-- Panels overlay-->
@@ -186,7 +186,7 @@
   </ul>
 </div>
               <!-- Button to calculate weight loss -->
-              <p style="margin-left: 10%; margin-right: 10%;"><a onClick="calculate()" href="#" class="button button-big button-round color-red">Calculate</a></p>
+              <p style="margin-left: 10%; margin-right: 10%;"><a onClick="calculate()" href="#" class="button button-fill button-raised color-purple">Calculate</a></p>
             </div>
           </div>
         </div>
