Changed jQuery to local storage instead of CDN

--- a/material/index.html
+++ b/material/index.html
@@ -230,6 +230,8 @@
         </div>
       </div>
     </div>
+    <!-- jQuery -->
+    <script src="js/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <!-- Most of the logic is here -->
     <script src="js/logic.js"></script>
     <!-- Path to Framework7 Library JS-->
@@ -240,7 +242,6 @@
     <script src="js/Chart.js"></script>
     <!-- Chart.js annotation plugin -->
     <script src="js/chartjs-plugin-annotation.js"></script>
-    <!-- jQuery -->
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
   </body>
 </html>
