--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="white">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="white">
     <title>Weight estimator</title>
     <!-- Path to Framework7 Library CSS-->
     <link rel="stylesheet" href="css/framework7.ios.min.css">
@@ -215,6 +219,8 @@
         </div>
       </div>
     </div>
+    <!-- jQuery -->
+    <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Most of the logic is here -->
     <script src="js/logic.js"></script>
     <!-- Path to Framework7 Library JS-->
@@ -225,7 +231,6 @@
     <script src="js/Chart.js"></script>
     <!-- Chart.js annotation plugin -->
     <script src="js/chartjs-plugin-annotation.js"></script>
-    <!-- jQuery -->
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
   </body>
 </html>
